#####                           CHANGELOG                                  #####
#####                                                                      #####
################################################################################

0.7.* UPDATES
--------------------------------------------------------------------------------
6: Case caught, when no novel genes are detected
5: Critical bugfix in the seqkit output
4: Path bug in final report fixed (after renaming not adjusted)
3: Resource allocations for a missing rule added
2: Some defaults server resource allocations adjusted
1: New dev branch opened

0.6.*: Stable release
--------------------------------------------------------------------------------
1: Grous removed as they have caused some problems to users
2: Added the limitBAMsortRAM option for STAR alignment

0.5.* UPDATES
--------------------------------------------------------------------------------
24: Structure in chapter 'Origin of reads' optimised
23: Resolution for the read summary figure adjusted
22: Bugfix for RPKm calculation in STAR protein coding expression values
21: hairpin_species quantification table is exported to the QUANTIFICATION folder
20: hairpin quantification table is exported to the QUANTIFICATION folder
19: mature_species quantification table is exported to the QUANTIFICATION folder
18: mature quantification table is exported to the QUANTIFICATION folder
17: tRNA quantification table is exported to the QUANTIFICATION folder
16: Bugfix for mirna-species filtering (caused that not all miRNAs were quantified)
15: Subparagraph added for novel clustering (missing linebreak added)
14: stdout and stderr are now redirected to CUTADAPT log files
13: STAR indices are not created in groups anymore
12: Quantification is now also grouped
11: Preprocessing is done in a single group now
10: QC rules are combined into two groups, fastqc and multiqc 
9: The alignment module has now only two groups, bowtie_alignment and star_alignment