@@ -6,6 +6,8 @@ rule seqkit_quantify_mature_BOWTIE:
         bam="%s/BAM/BOWTIE/Mature/{samples}_mature.bam" % (config["project-folder"])
     output:
         "%s/QUANTIFICATION/BOWTIE/Mature/{samples}_bowtie_mature_seqkit.txt" % (config["project-folder"])
+    log:
+        "%s/logs/SEQKIT/seqkit_bowtie_maturefa.{samples}.log" % (config["project-folder"])
     benchmark:
         "%s/benchmark/seqkit/seqkit_bowtie_maturefa.{samples}.benchmark.tsv" % (config["project-folder"])
     threads: cluster["seqkit_quantify_maturefa_BOWTIE"]["cpus-per-task"]
@@ -14,7 +16,8 @@ rule seqkit_quantify_mature_BOWTIE:
         mem=cluster["seqkit_quantify_maturefa_BOWTIE"]["mem-per-cpu"]
     singularity: config["singularity"]["seqkit"]
     shell:"""
-        seqkit bam -C {input.bam} > {output} 2>&1
+    # This is needed, as the desired output is in stderr, but when I capture that in a file, I get a non-zero exit error
+        seqkit bam -C {input.bam} 2> {log} && cat {log} > {output}
     """
     
 rule seqkit_quantify_mature_species_BOWTIE:
@@ -25,6 +28,8 @@ rule seqkit_quantify_mature_species_BOWTIE:
         bam="%s/BAM/BOWTIE/Mature_Species/{samples}_mature_species.bam" % (config["project-folder"])
     output:
         "%s/QUANTIFICATION/BOWTIE/Mature_Species/{samples}_bowtie_mature_species_seqkit.txt" % (config["project-folder"])
+    log:
+        "%s/logs/SEQKIT/seqkit_bowtie_maturespeciesfa.{samples}.log" % (config["project-folder"])
     benchmark:
         "%s/benchmark/seqkit/seqkit_bowtie_maturespeciesfa.{samples}.benchmark.tsv" % (config["project-folder"])
     threads: cluster["seqkit_quantify_maturefa_BOWTIE"]["cpus-per-task"]
@@ -33,7 +38,8 @@ rule seqkit_quantify_mature_species_BOWTIE:
         mem=cluster["seqkit_quantify_maturefa_BOWTIE"]["mem-per-cpu"]
     singularity: config["singularity"]["seqkit"]
     shell:"""
-        seqkit bam -C {input.bam} > {output} 2>&1
+        # This is needed, as the desired output is in stderr, but when I capture that in a file, I get a non-zero exit error
+        seqkit bam -C {input.bam} 2> {log} && cat {log} > {output}
     """
     
 rule seqkit_quantify_hairpin_BOWTIE:
@@ -44,6 +50,8 @@ rule seqkit_quantify_hairpin_BOWTIE:
         bam="%s/BAM/BOWTIE/Hairpin/{samples}_hairpin.bam" % (config["project-folder"])
     output:
         "%s/QUANTIFICATION/BOWTIE/Hairpin/{samples}_bowtie_hairpin_seqkit.txt" % (config["project-folder"])
+    log:
+        "%s/logs/SEQKIT/seqkit_bowtie_hairpin.{samples}.log" % (config["project-folder"])
     benchmark:
         "%s/benchmark/seqkit/seqkit_bowtie_hairpin.{samples}.benchmark.tsv" % (config["project-folder"])
     threads: cluster["seqkit_quantify_maturefa_BOWTIE"]["cpus-per-task"]
@@ -52,7 +60,8 @@ rule seqkit_quantify_hairpin_BOWTIE:
         mem=cluster["seqkit_quantify_maturefa_BOWTIE"]["mem-per-cpu"]
     singularity: config["singularity"]["seqkit"]
     shell:"""
-            seqkit bam -C {input.bam} > {output} 2>&1
+        # This is needed, as the desired output is in stderr, but when I capture that in a file, I get a non-zero exit error
+        seqkit bam -C {input.bam} 2> {log} && cat {log} > {output}
     """
 
 rule featureCounts_quantify_reference_BOWTIE:
