@@ -6,6 +6,8 @@
 
 0.7.* UPDATES
 --------------------------------------------------------------------------------
+8: Pipeline allows now separate 3' and 5' adapter trimming
+7: Critical bugfix, seqkit rules reported suddenly non-zero exit errors
 6: Case caught, when no novel genes are detected
 5: Critical bugfix in the seqkit output
 4: Path bug in final report fixed (after renaming not adjusted)
